Lots of tiny code cleanups.